# strata-db

./: .clang-format  .clang-tidy  .gitignore  .gitmessage  CMakeLists.txt  README.md
benchmarks/: README.md  allocator_bench.cpp  allocator_lifecycle_bench.cpp  benchmark_common.hpp  epoch_stall_bench.cpp  fragmentation_bench.cpp  locality_bench.cpp  memtable_bench.cpp  page_bench.cpp  tlab_bench.cpp  wal_ring_bench.cpp
docs/architecture/: 00-build-and-toolchain.md  01-epoch-reclamation.md  02-configuration-management.md  02-configuration.md  03-memory-arena.md  04-thread-local-allocation.md  05-skiplist-memtable.md  06-skiplist-node.md  07-wal-staging.md  08-io-engine-physics.md  09-wal-concurrency.md
docs/benchmark/: README.md
docs/decisions/: ADR-001-wal-segment-pool.md
docs/performance/: README.md
docs/script/: README.md
include/stratadb/config/: config_manager.hpp  config_resolver.hpp  immutable_config.hpp  io_config.hpp  memory_config.hpp  memory_policy.hpp  memtable_config.hpp  mutable_config.hpp  page_config.hpp  thresholds.hpp  wal_config.cpp  wal_config.hpp  wal_policy.hpp
include/stratadb/config/immutable/: block_pool_config.hpp  epoch_config.hpp  io_config.hpp  memory_config.hpp  numa_config.hpp  page_config.hpp  skiplist_config.hpp  wal_config.hpp
include/stratadb/config/mutable/: memtable_config.hpp  wal_tunable_config.hpp
include/stratadb/io/: io_capabilities.hpp  io_concept.hpp  io_types.hpp  posix_io_engine.hpp  unique_file_descriptor.hpp
include/stratadb/memory/: arena.hpp  block_pool.hpp  epoch_manager.hpp  tlab.hpp  virtual_region.hpp
include/stratadb/memtable/: memtable_concept.hpp  memtable_result.hpp  skiplist_memtable.hpp  skiplist_node.hpp
include/stratadb/platform/: hardware_model.hpp  hardware_probe.hpp  identity.hpp
include/stratadb/utils/: align.hpp  bytes.hpp  cache.hpp  hardware.hpp  hash.hpp  limits.cpp  limits.hpp  math.hpp  os.hpp  probe.hpp  simd.hpp  thread.hpp  xxhash.hpp
include/stratadb/wal/: concepts.hpp  delta_block.hpp  gamma_block.hpp  manager.hpp  pipeline.hpp  pipeline_variant.hpp  spsc_mailbox_queue.hpp  types.hpp  vyukov_mpsc_queue.hpp  wal_block.hpp  wal_concept.hpp  wal_manager.hpp  wal_pipeline.hpp  wal_staging.hpp
include/stratadb/wal/block/: delta_block.hpp  gamma_block.hpp
include/stratadb/wal/pool/: segment_pool.hpp  segment_state.hpp
include/stratadb/wal/queue/: spsc_mailbox_queue.hpp  vyukov_mpsc_queue.hpp
include/stratadb/wal/reader/: reader.hpp  validator.hpp  wal_validator.hpp
include/stratadb/wal/ring/: ring.hpp  slot_types.hpp
include/stratadb/wal/slot/: slot_footer.hpp  slot_header.hpp  wal_slot.hpp
scripts/: bench.sh  test.sh
src/config/: config_manager.cpp  config_resolver.cpp
src/io/: posix_io_engine.cpp
src/memory/: arena.cpp  block_pool.cpp  epoch_manager.cpp  tlab.cpp  virtual_region.cpp
src/memtable/: skiplist_memtable.cpp  skiplist_node.cpp
src/platform/: hardware_probe.cpp  identity.cpp
src/utils/: hardware.cpp  os.cpp  probe.cpp  simd.cpp
src/wal/: manager.cpp  wal_hash.cpp  wal_manager.cpp  wal_staging.cpp
src/wal/pool/: segment_pool.cpp
src/wal/reader/: reader.cpp
src/wal/ring/: ring.cpp
tests/config/: config_manager_test.cpp
tests/helper/: test_config_helper.hpp
tests/io/: posix_io_engine_test.cpp
tests/memory/: arena_test.cpp  block_pool_test.cpp  epoch_manager_test.cpp  tlab_test.cpp  virtual_region_test.cpp
tests/memtable/: skiplist_memtable_edge_test.cpp  skiplist_memtable_test.cpp  skiplist_node_test.cpp
tests/platform/: hardware_probe_test.cpp
tests/support/: byte_helpers.hpp  common.hpp  memtable_fixture.hpp  test_config.hpp  wal_test_helpers.hpp
tests/wal/: block_format_test.cpp  queue_test.cpp  spsc_mailbox_queue_test.cpp  vyukov_mpsc_queue_test.cpp  wal_manager_config_test.cpp  wal_manager_core_test.cpp  wal_manager_test.cpp  wal_reader_test.cpp  wal_segment_pool_test.cpp  wal_test_helpers.hpp
